--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+h1{
+  font-size: 30px;
+  color: #2B4865;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.crossed{
+  text-decoration: line-through 3px red;
+  background-color: #C1EFFF;
+}
+ul,li{
+  list-style-type: none;
+  padding: 10px;
+  margin: 0;
   }
-  to {
-    transform: rotate(360deg);
+  .add{
+    margin-top: 5px;
+    background-color: #3AB4F2;
+    padding: 10px;
+    border: none;
+    width: 70%;
+    font-size: 18px;
+    font-weight: bolder;
   }
-}
+  .delete{
+    background-color: #FA9494;
+    padding: 10px;
+    border: none;
+    width: 70%;
+    font-size: 18px;
+    font-weight: bolder;
+  }
+  input{
+    flex: 1;
+    padding: 8px;
+    margin: 25px;
+    
+  }
+  img{
+    margin-top: 20px;
+  }
